Fixes Cubelet alignment issue, hides Cubelets on window blur.

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -394,9 +394,9 @@ canvas {
     }
 
     .crosshair .rotation-control {
-      left: 20px;
+      left: 25px;
       position: absolute;
-      top: 20px;
+      top: 25px;
     }
 
 #control-pane {
